positioned images and added button

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ html{
     color: red;
     text-align: center;
     display:inline;
-    position:relative;
+    /* position:relative; */
     z-index: 1;
 }
 #header h3{
@@ -23,11 +23,28 @@ html{
     font-style: normal;
     font-weight: 400;
     font-size: 96px;
-    line-height: 108px;
     color:white;
     text-align: center;
-}
+    line-height: 175px;}
 /* putting in cool shapes */
+
+#flounder-rec{
+    z-index: -1;
+    position: relative;
+}
+#flounder-text{
+    z-index: 1;
+    overflow: visible;
+    color:white;
+    position:absolute;
+    left: 40px;
+    top: 20px;
+}
+
+#flounder-block{
+    position:relative;
+    left:400px;
+}
 #code-block{
     height: 175px;
     width: 547px;
@@ -35,33 +52,49 @@ html{
     top: 148px;
     border-radius: 0px;
     background: #343434;
+    position: relative;
+    left: 100px;
 }
-/* #flounder-block{
-    height: 178px;
-    width: 400px;
-    border-radius: 10% 19% 67% 60% / 29% 53% 34% 0% ;
+#header-first{
+    position:relative;
+    left: 300px;
+}
+#header-second{
+    position:relative;
+    left: 900px;
+    top: -70px;
+}
+#code-block{
+    position:relative;
+    left: 1000px;
+    top: -150px;
+}
+
+#intro-block{
+    position:relative;
+}
+#intro-text{
+    position:absolute;
+    top: 100px;
+    left:600px;
+    display:inline;
+    font-size: 40px;
+}
+
+#intro-button a:link, a:visited{
+    display:inline-block;
+    width:420px;
+    height:126px;
+    line-height:1.5;
     background: #4E8EBE;
-} */
-/* #intro-block{
-    width: 1440px;
-    height: 473px;
-    viewBox
-    background: #FFA686;
- } */
-#flounder-rec{
-    z-index: -1;
-    position: absolute;
-    left: 221px;
-    top: 57px;
+    color:black;
+    border-radius:20px;
+    justify-content: center;
+    text-align:center;
+    align-items: center;
+    text-decoration: none;}
+
+#intro-button a:hover, a:active{
+    background: #343434;
+    color: white;
 }
-#flounder-block text{
-    z-index: 1;
-    overflow: visible;
-    color:red;
-}
-#flounder-block h2{
-    position: absolute;
-    top:50%;
-    left:50%;
-}
-   
