--- a/styles.css
+++ b/styles.css
@@ -181,17 +181,24 @@ html{
     width:100%;
     height:400px;
     font-size: 36px;
+    overflow:hidden;
 }
 #extra p{
     position:relative;
     top:1.5rem;
     left:30rem;
+    width: 60rem;
 }
 #extra li{
     font-weight: 300;
+    width: 60rem;
+}
+#extra a{
+    width: 60rem;
 }
 
 #extra ul{
+  
     list-style-type:"> ";
    position:relative; 
     left:50rem;
@@ -205,4 +212,73 @@ html{
 }
 #extra a:hover{
     color: #4E8EBE
+}
+
+#contact h1{
+    position:relative;
+    left: 30%;    
+    font-weight:700;
+    font-size:64px;
+    width:60%;
+}
+#contact p{
+    position:relative;
+    left: 35%;    
+    font-weight:300;
+    font-size:48px;
+    width:60%;
+}
+#message{
+    position:relative;
+    left:9%;
+    width: 80%;
+    height: auto;
+    background: #FFA686;
+    border-radius: 40px;
+    padding:50px;
+}
+#contact-form{
+    padding-bottom: 10rem;
+}
+label, input{
+    display:block;
+    border-radius: 5px;
+    border: none;
+}
+label{
+    margin-bottom:20px;
+    font-size: 30px;
+}
+#name-enter {
+    font-size: 25px;
+    padding:5px;
+}
+#email-enter{
+    font-size: 25px;
+    padding:5px;
+
+}
+#message-enter{
+    font-size: 20px;
+    width:100%;
+    padding: 0 5px 200px;}
+
+input[type=reset], input[type=submit]{ 
+    display: inline;
+    float:right;
+    width:300px;
+    height:80px;
+    border:none;
+    margin-right:15px;
+    font-size:25px;
+    border-radius:5px;
+}
+input[type=reset]{
+    background: #CDF7F6;
+}
+input[type=submit]{
+    background-color: #FDC5F5;
+}
+input[type=reset]:hover, input[type=submit]:hover{
+    background:  #4E8EBE;
 }
